# Quads2Tris

./: README.md  gui_triangulate_parallel.py  gui_trias.bat  pyproject.toml  style.qt  triangulate_mesh_batch.py
